src/style/style.scss
@import '_vars';
@import '_form';
@import '_layout';
@import '_chip';
@import '_app-bar';
@import '_list';

@import '../containers/timesheet-calendar/timesheet-calendar';
@import './chart';

body {
    font: 100% $font-stack;

    padding: 0;
    margin: 0;
  }

  a:visited, a:link {
    text-decoration: none;
    color: var(--mdc-theme-secondary, #6200ee);
  }

  a:hover, a:active {
    text-decoration: none;
    color: var(--mdc-theme-primary, #6200ee);
  }

  .body-wrapper {
    display: flex;
    height: 100vh;
  }

  .app-fab--absolute {
    position: fixed;
    bottom: 2rem;
    right: 2rem;
  }

  .mdc-top-app-bar {
    position: absolute;
  }

  .main-content {
    overflow: auto;
    height: calc(100% - 48px);
  }

  @media (min-width: 600px) {
    .main-content {
      height: calc(100% - 64px);
    }
  }

